--- a/apache/lucene/pom.xml
+++ b/apache/lucene/pom.xml
@@ -13,7 +13,7 @@
 	<description>Ultra-Fast Search Library</description>
 
 	<properties>
-		<lucene.version>5.0.0.</lucene.version>
+		<lucene.version>5.0.0</lucene.version>
 	</properties>
 
 	<dependencies>
