--- a/jersey/pom.xml
+++ b/jersey/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>jersey-bom</groupId>
 	<artifactId>jersey-bom</artifactId>
-	<version>${jersey.version}</version>
+	<version>1.9</version>
 	<packaging>pom</packaging>
 	
 	<name>Jersey BOM</name>
