--- a/apache/lucene/pom.xml
+++ b/apache/lucene/pom.xml
@@ -82,6 +82,11 @@
 			<artifactId>lucene-codecs</artifactId>
 			<version>${lucene.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-codecs</artifactId>
+			<version>${lucene.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
